--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": ">4.3.0"
+        "php": ">=5.0"
     }, 
     "autoload": {
         "classmap": ["./"]
